--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
  <title>Balcado ⛏</title>
      <link rel="preconnect" href="https://fonts.gstatic.com">
-    <meta name="description" content="I decided that there weren't enough css frameworks so I made my own"
+    <meta name="description" content="minecraft website super cool (wow)"
       <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
      <link rel="icon" type="image/png" href="images/balcado.png" sizes="128x128">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.0/css/all.css">
