--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <a  class="links"  href="https://fortnite.com"><button><!--Fortnite--><svg class="games" xmlns="http://www.w3.org/2000/svg" width="1px" height="1px" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 3h7.5L15 7h-3v3h3v3.5h-3V20l-4 1z"/></svg></button></a>
         <a   class="links" style="margin-left: 50px;"  href="#features"><button style=""><!--Features--><svg class="things" xmlns="http://www.w3.org/2000/svg" width="1px" height="1px" viewBox="0 0 24 24"><path fill="currentColor" d="M7 13h7q.425 0 .713-.288T15 12t-.288-.712T14 11H7q-.425 0-.712.288T6 12t.288.713T7 13m0-3h7q.425 0 .713-.288T15 9t-.288-.712T14 8H7q-.425 0-.712.288T6 9t.288.713T7 10M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm0-2h16V6H4zm0 0V6z"/></svg></button></a>
         <a  class="links"  href="#donate"><button><!--Donate--><svg class="things"  xmlns="http://www.w3.org/2000/svg" width="5px" height="5px" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="1.5"><path d="M16 6.28a2.28 2.28 0 0 1-.662 1.606c-.976.984-1.923 2.01-2.936 2.958a.597.597 0 0 1-.822-.017l-2.918-2.94a2.28 2.28 0 0 1 0-3.214a2.277 2.277 0 0 1 3.232 0L12 4.78l.106-.107A2.276 2.276 0 0 1 16 6.28Z"/><path stroke-linecap="round" d="m18 20l3.824-3.824a.6.6 0 0 0 .176-.424V10.5A1.5 1.5 0 0 0 20.5 9v0a1.5 1.5 0 0 0-1.5 1.5V15"/><path stroke-linecap="round" d="m18 16l.858-.858a.48.48 0 0 0 .142-.343v0a.49.49 0 0 0-.268-.433l-.443-.221a2 2 0 0 0-2.308.374l-.895.895a2 2 0 0 0-.586 1.414V20M6 20l-3.824-3.824A.6.6 0 0 1 2 15.752V10.5A1.5 1.5 0 0 1 3.5 9v0A1.5 1.5 0 0 1 5 10.5V15"/><path stroke-linecap="round" d="m6 16l-.858-.858A.5.5 0 0 1 5 14.799v0c0-.183.104-.35.268-.433l.443-.221a2 2 0 0 1 2.308.374l.895.895a2 2 0 0 1 .586 1.414V20"/></g></svg></button></a>
-        <a  class="links"  href="#vote"><button><!--Vote--><svg class="things"  xmlns="http://www.w3.org/2000/svg" width="5px" height="5px" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-linejoin="round" stroke-width="1.5"><path d="M16 6.28a2.28 2.28 0 0 1-.662 1.606c-.976.984-1.923 2.01-2.936 2.958a.597.597 0 0 1-.822-.017l-2.918-2.94a2.28 2.28 0 0 1 0-3.214a2.277 2.277 0 0 1 3.232 0L12 4.78l.106-.107A2.276 2.276 0 0 1 16 6.28Z"/><path stroke-linecap="round" d="m18 20l3.824-3.824a.6.6 0 0 0 .176-.424V10.5A1.5 1.5 0 0 0 20.5 9v0a1.5 1.5 0 0 0-1.5 1.5V15"/><path stroke-linecap="round" d="m18 16l.858-.858a.48.48 0 0 0 .142-.343v0a.49.49 0 0 0-.268-.433l-.443-.221a2 2 0 0 0-2.308.374l-.895.895a2 2 0 0 0-.586 1.414V20M6 20l-3.824-3.824A.6.6 0 0 1 2 15.752V10.5A1.5 1.5 0 0 1 3.5 9v0A1.5 1.5 0 0 1 5 10.5V15"/><path stroke-linecap="round" d="m6 16l-.858-.858A.5.5 0 0 1 5 14.799v0c0-.183.104-.35.268-.433l.443-.221a2 2 0 0 1 2.308.374l.895.895a2 2 0 0 1 .586 1.414V20"/></g></svg></button></a>
+        <a  class="links"  href="#vote"><button><!--Vote--><svg class="things" xmlns="http://www.w3.org/2000/svg" width="1px" height="1px" viewBox="0 0 24 24"><path fill="currentColor" d="M18 13h-.68l-2 2h1.91L19 17H5l1.78-2h2.05l-2-2H6l-3 3v4a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-4zm-1-5.05l-4.95 4.95L8.5 9.36l4.96-4.95zm-4.24-5.66L6.39 8.66a.996.996 0 0 0 0 1.41L11.34 15c.39.41 1.02.41 1.41 0l6.36-6.34a.996.996 0 0 0 0-1.41L14.16 2.3a.975.975 0 0 0-1.4-.01"/></svg></button></a>
 
             </div>
             </div>
@@ -117,7 +117,7 @@
        <br>
        <center>
           <section>
-        
+        <div  class="grid">
               <div class="card" id="card">
         <div class="icon">
           <img src="https://pbs.twimg.com/profile_images/808180587605331969/u-CULTwl_400x400.jpg" id="favicon"></div>
@@ -129,7 +129,11 @@
         <div id="rest">
 Loading ...</div>
       </div>
-
+      <div class="vote">
+        <a href="https://www.planetminecraft.com/server/balcado/vote/"><button>Vote Here <i class="fa-solid fa-arrow-right"></i> </button></a>
+        <a href="https://www.planetminecraft.com/server/balcado/vote/"><button><i class="fa fa-thumbs-o-up"></i></button></a>
+    </div>
+  </div>
                 </section>
            
           </center>
@@ -1071,7 +1075,29 @@ document.addEventListener("DOMContentLoaded", function () {
     </script>
       <script src="https://cdn.jsdelivr.net/npm/boostrap@5.01/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISKJkNUaaKMoLD0//ElJ19smozuHV6z3Ieehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"> </script>
 
+<!--Engaging Gameplay Modes: Our server offers an array of gameplay modes, from survival challenges to creative building and intense PvP battles, ensuring there's something for every player.
 
+Custom Plugins and Mods: We've crafted custom plugins and mods to inject unique mechanics and experiences into the game, keeping players intrigued and eager to explore.
+
+Active Community: Our server buzzes with activity thanks to our vibrant community. We've set up forums, Discord servers, and in-game chat systems to encourage interaction and camaraderie among players.
+
+Events and Competitions: We regularly host thrilling events and competitions, pitting players against each other in epic battles or challenging them with creative build-offs. There's always something exciting on the horizon.
+
+Economy and Trading Systems: Our player-driven economy thrives with bustling marketplaces and trading hubs, where players can buy, sell, and trade goods to their heart's content.
+
+Custom Maps and Builds: Immerse yourself in breathtaking custom-built worlds and structures that add depth and beauty to the Minecraft experience, all painstakingly created by our talented team.
+
+Anti-Griefing Measures: Our server is a safe haven for builders and creators, thanks to our robust anti-griefing measures. Your creations are protected, and our vigilant moderation team ensures that troublemakers are swiftly dealt with.
+
+Ranking and Progression Systems: Climb the ranks and unlock prestigious rewards as you progress through our server. Whether you're a seasoned veteran or a newcomer, there's always a goal to strive for.
+
+Customizable Player Experience: Tailor your adventure to your liking with customizable settings, from difficulty levels to game rules and cosmetic enhancements. It's your world – play it your way.
+
+Quality of Life Improvements: We've implemented a slew of quality-of-life improvements to streamline your gameplay experience, from teleportation commands to convenient inventory management tools.
+
+Regular Updates and Maintenance: Our commitment to excellence means that our server receives regular updates, bug fixes, and maintenance to ensure a smooth and enjoyable experience for all players.
+
+Fair and Transparent Administration: Our dedicated staff team upholds fairness and transparency at every turn, with clear rules, responsive support, and fair enforcement ensuring a welcoming environment for all.-->
 </html>
 
   
