--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <div id="rest">
 Loading ...</div>
           </i>
-          <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
-            Suspendisse finibus non sem vitae viverra.</p>
+          <p> In the Survival world, adventurers band together to conquer the wilderness, build thriving communities, and face the challenges that lurk around every corner. Whether it's braving perilous dungeons, embarking on epic quests, or simply crafting a cozy home, survivalists forge their own paths in a dynamic and ever-evolving landscape.</p>
           <a class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect</a>
         </div>
         <div class="col l4 s12">
@@ -106,8 +105,7 @@ Loading ...</div>
 <div id="rest">
 Loading ...</div>
           </i>
-          <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
-            Suspendisse finibus non sem vitae viverra.</p>
+          <p>Meanwhile, the Creative realm of Balcado.gg offers a blank canvas for players to unleash their imaginations. From towering castles to intricate redstone contraptions, creativity knows no bounds in this mode. Builders can collaborate on ambitious projects, showcase their masterpieces, and draw inspiration from the boundless possibilities of Minecraft's blocky universe. With limitless resources at their fingertips, the only limit is the extent of one's imagination.</p>
           <a class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect</a>
         </div>
         <div class="col l4 s12">
@@ -117,8 +115,7 @@ Loading ...</div>
 <div id="rest">
 Loading ...</div>
           </i>
-          <p>Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed ornare ornare.
-            Suspendisse finibus non sem vitae viverra.</p>
+          <p>For those seeking a different kind of challenge, Balcado.gg's Skyblock mode beckons with its unique twist on the classic Minecraft experience. Stranded on a floating island suspended in the void, players must harness their resourcefulness to thrive in this hostile environment. With limited space and resources, every decision matters as skyblockers strive to expand their island, trade with other players, and conquer the challenges that await in the endless sky. Whether soaring to new heights or delving into the depths, Balcado.gg offers an immersive Minecraft experience for players of all stripes.</p>
           <a class="btn-large waves-effect waves-light grey darken-4" style="margin-bottom: 9%; margin-top: 2%;">Connect</a>
         </div>
       </div>
@@ -137,10 +134,9 @@ Loading ...</div>
         </div>
         <div class="col s12 l7" data-aos="fade-left">
           <h4>Okay... so, what really is Balcado?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien sed
-            ornare ornare. Suspendisse finibus non sem vitae viverra.Morbi molestie mollis molestie. Morbi molestie mollis molestie. Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit. Integer ultricies sapien
-            sed ornare ornare. Suspendisse finibus non sem vitae viverra. Morbi molestie mollis molestie.</p>
-          <p>Sed tincidunt diam eu ante pharetra dignissim. Aenean viverra risus sed ullamcorper blandit.</p>
+          <p>Beyond the gameplay, Balcado.gg fosters a sense of community, where friendships are formed, alliances are forged, and creativity is celebrated. With regular events, competitions, and a dedicated team of moderators ensuring a safe and enjoyable experience for all, Balcado.gg isn't just a Minecraft server—it's a home away from home for countless players around the world.</p>
+          <p>
+            Balcado.gg isn't just a Minecraft server—it's a vibrant online community where players from all walks of life come together to explore, create, and connect. At its core, Balcado.gg is a carefully crafted virtual environment hosting various modes, including Survival, Creative, and Skyblock, each offering its own unique gameplay experience.</p>
           <a class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" href="#">Discord</a>
         </div>
       </div>
@@ -175,7 +171,8 @@ Loading ...</div>
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-                   I'm 7TE, the Co-Founder of Balcaldo and I created this website. <span style="font-size: 200%;">👨🏻‍💻</span>
+                   
+Hey there! I'm 7TE, one of the co-founders of Balcaldo, and I'm thrilled to tell you about how this website came to be. As a passionate Minecraft player myself, I wanted to create a space where players could come together, explore different game modes, and build amazing creations. So, along with my fellow co-founders, we set out to bring our vision to life. <span style="font-size: 200%;">👨🏻‍💻</span>
               </blockquote>
             </div>
           </div>
