--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Loading ...</div>
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
                    
-Hey there! I'm 7TE, one of the co-founders of Balcaldo, and I'm thrilled to tell you about how this website came to be. As a passionate Minecraft player myself, I wanted to create a space where players could come together, explore different game modes, and build amazing creations. So, along with my fellow co-founders, we set out to bring our vision to life. <span style="font-size: 200%;">👨🏻‍💻</span>
+Hey there! I'm 7TE, one of the co-founder of Balcaldo, and I'm thrilled to tell you about how this website came to be. As a passionate Minecraft player myself, I wanted to create a space where players could come together, explore different game modes, and build amazing creations. So, along with my fellow co-founders, we set out to bring our vision to life. <span style="font-size: 200%;">👨🏻‍💻</span>
               </blockquote>
             </div>
           </div>
