--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- Roboto Font + Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;600" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display" rel="stylesheet">
 
   <!-- Font Awesome -->
