--- a/index.html
+++ b/index.html
@@ -134,9 +134,13 @@ Loading ...</div>
         </div>
         <div class="col s12 l7" data-aos="fade-left">
           <h4>Okay... so, what really is Balcado?</h4>
-          <p>Beyond the gameplay, Balcado.gg fosters a sense of community, where friendships are formed, alliances are forged, and creativity is celebrated. With regular events, competitions, and a dedicated team of moderators ensuring a safe and enjoyable experience for all, Balcado.gg isn't just a Minecraft server—it's a home away from home for countless players around the world.</p>
           <p>
-            Balcado.gg isn't just a Minecraft server—it's a vibrant online community where players from all walks of life come together to explore, create, and connect. At its core, Balcado.gg is a carefully crafted virtual environment hosting various modes, including Survival, Creative, and Skyblock, each offering its own unique gameplay experience.</p>
+            Balcado.gg prides itself on being a free-to-play Minecraft server, meaning that anyone can join and enjoy the diverse gaming experiences it offers without having to pay a single dime. Here's how it works:</p>
+          <p>
+<b>No Entry Fee:</b> Unlike some servers that require a one-time or recurring payment to access certain features or game modes, Balcado.gg is completely free to join. There are no entry fees or subscription charges, making it accessible to players of all backgrounds and financial situations.
+<b>Accessible Gameplay:</b> All of Balcado.gg's game modes—Survival, Creative, and Skyblock—are available to every player, regardless of whether they choose to spend money on in-game purchases or not. This ensures that everyone has equal access to the full range of experiences the server has to offer.
+<b>Cosmetic Microtransactions:</b> While the core gameplay remains free, Balcado.gg may offer optional cosmetic microtransactions for players who wish to customize their in-game experience. These purchases are entirely optional and do not provide any gameplay advantages, ensuring that the server remains fair and balanced for all players.
+<b>Community Support:</b> Balcado.gg relies on the support of its vibrant community to thrive. Players who enjoy their time on the server often choose to contribute in other ways, such as participating in events, sharing their creations, or simply spreading the word to friends and fellow gamers.</p>
           <a class="waves-effect waves-light btn-large grey darken-4" style="margin-top: 2%;" href="#">Discord</a>
         </div>
       </div>
