--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Hey there! I'm 7TE, one of the co-founder of Balcaldo, and I'm thrilled to tell 
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-                 I'm Maro, the creator and founder of Balcado. <span style="font-size: 200%;">👋</span>
+                Hey there, I'm Maro, the mastermind behind Balcado! 👋 Crafting this server has been an incredible journey, fueled by my passion for Minecraft and a desire to create a welcoming community for players worldwide. From the very beginning, my vision was clear: to build a space where adventurers could come together, explore diverse game modes, and forge unforgettable memories.
               </blockquote>
             </div>
           </div>
@@ -232,7 +232,8 @@ Hey there! I'm 7TE, one of the co-founder of Balcaldo, and I'm thrilled to tell 
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-               ass
+               
+Hey there, I'm Asser606, one of the moderators here at Balcado! 👋 Being a mod on this server is more than just a role to me—it's a commitment to ensuring that every player has a positive and enjoyable experience. From keeping the chat friendly and respectful to helping out with in-game issues, I'm here to lend a hand whenever needed.
               </blockquote>
             </div>
           </div>
@@ -260,8 +261,7 @@ Hey there! I'm 7TE, one of the co-founder of Balcaldo, and I'm thrilled to tell 
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-                        i ran out of ideas
-              </blockquote>
+                Hey everyone, I'm Anes, also known as Nightmaree__ on Balcado! 🌟 Being a part of this incredible community has been an absolute blast. From the moment I joined, I felt welcomed by the warm and friendly atmosphere that permeates throughout the server.              </blockquote>
             </div>
           </div>
           <div class="row main">
@@ -288,7 +288,7 @@ Hey there! I'm 7TE, one of the co-founder of Balcaldo, and I'm thrilled to tell 
           <div class="row">
             <div class="col s12">
               <blockquote style="margin: 0% 8% 0% 8%;">
-                 I'm Korubii, <b>anime</b> <span style="font-size: 200%;">👋</span>
+                Hey everyone, I'm Korubiiii, one of the developers here at Balcado! 👋 Working behind the scenes to bring new features and enhancements to the server is both a passion and a privilege for me. From tweaking gameplay mechanics to squashing bugs, I'm dedicated to ensuring that Balcado delivers the best possible experience for players.
               </blockquote>
             </div>
           </div>
@@ -307,6 +307,32 @@ Hey there! I'm 7TE, one of the co-founder of Balcaldo, and I'm thrilled to tell 
   <!-- / Staff -->
 
   <!-- Vip -->
+  <!--
+  
+VIP Tier:
+
+Exclusive VIP tag and rank in-game, displaying your status to other players.
+Access to a VIP-only area with unique aesthetics, such as a luxurious lounge or scenic viewing platform.
+Monthly VIP loot crate containing cosmetic items, special mounts, and decorative blocks.
+Priority access to join full servers, ensuring you can always find a spot even during peak times.
+Access to a VIP-exclusive Discord channel for direct communication with other VIP members and staff.
+
+VIP+ Tier:
+
+All perks from the VIP tier.
+Double experience points for cosmetic progression, allowing you to unlock skins, emotes, and other cosmetic items faster.
+VIP+ prefix and color customization for your in-game name, allowing you to stand out among other players.
+Access to special VIP+ events and tournaments with unique challenges and rewards, such as exclusive cosmetic items or titles.
+Ability to set up private VIP+ parties or events within the server, inviting friends and other VIP members to join.
+
+VIP++ Tier:
+
+All perks from the VIP and VIP+ tiers.
+Triple the rewards from daily login bonuses, including cosmetic items, currency, and experience points.
+VIP++ exclusive cosmetic items and customization options, such as unique particle effects or animated skins.
+Direct access to a VIP++ suggestion box, where you can submit ideas and feedback directly to the server administrators.
+Personalized support from a VIP++ concierge service, providing assistance with in-game inquiries, technical issues, and general assistance.
+  -->
   <div class="vip center-align" id="vip">
     <div class="main">
       <div class="row" data-aos="fade">
