--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -315,7 +315,7 @@ Loading ...</div>
     <div class="main">
       <div class="row" data-aos="fade-down">
         <div class="col s12">
-          <h4>Donate to help the server.</h4>
+          <h4>Purchase ranks here!</h4>
         </div>
       </div>
       <div class="row">
@@ -329,24 +329,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
-                      <td>Perk 1</td>
-                    </tr>
-                    <tr>
                       <td>10 drachmas a week</td>
                     </tr>
                     <tr>
-                      <td>Perk 3</td>
+                      <td>Exclusive supporter tag in chat and on forums</td>
                     </tr>
                     <tr>
-                      <td>Perk 4</td>
+                      <td> Access to /nick command to change your in-game nickname</td>
                     </tr>
                     <tr>
-                      <td>Perk 5</td>
+                      <td>: Priority queue access during peak times</td>
+                    </tr>
+                    <tr>
+                      <td> Early access to new features and updates</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/BA6LX2L8AZLB2">Donate</a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/BA6LX2L8AZLB2">Purchase</a>
               </div>
             </div>
           </div>
@@ -361,24 +361,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
-                      <td>Perk 1</td>
+                      <td>20 drachmas a week (Includes Supporter perks)</td>
                     </tr>
                     <tr>
-                      <td>20 drachmas a week</td>
+                      <td> Custom prefix and suffix for your in-game name</td>
                     </tr>
                     <tr>
-                      <td>Perk 3</td>
+                      <td>Ability to set a home in one additional location</td>
                     </tr>
                     <tr>
-                      <td>Perk 4</td>
+                      <td>Access to a private Backer Discord channel for sneak peeks and discussions</td>
                     </tr>
                     <tr>
-                      <td>Perk 5</td>
+                      <td>Monthly Backer-exclusive events with special rewards</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/LBFYNT4AV4TMU">Donate</a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/LBFYNT4AV4TMU">Purchase</a>
               </div>
             </div>
           </div>
@@ -393,24 +393,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
-                      <td>Perk 1</td>
+                      <td>30 drachmas a week (Includes Supporter and Backer perks)</td>
                     </tr>
                     <tr>
-                      <td>30 drachmas a week</td>
+                      <td>Exclusive Benefactor cosmetic item (such as a cape or hat)</td>
                     </tr>
                     <tr>
-                      <td>Perk 3</td>
+                      <td> Increased daily claim block limit in the survival world</td>
                     </tr>
                     <tr>
-                      <td>Perk 4</td>
+                      <td>Ability to fly in your own claimed land</td>
                     </tr>
                     <tr>
-                      <td>Perk 5</td>
+                      <td>Quarterly Benefactor-only build competitions with substantial prizes</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TRWQVWJX8KJNE">Donate</a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TRWQVWJX8KJNE">Purchase</a>
               </div>
             </div>
           </div>
@@ -425,24 +425,24 @@ Loading ...</div>
                 <table class="centered responsive-table striped">
                   <tbody>
                     <tr>
-                      <td>Perk 1</td>
+                      <td>100 drachmas a week (Includes Supporter, Backer, and Benefactor perks)</td>
                     </tr>
                     <tr>
-                      <td>100 drachmas a week</td>
+                      <td>Unique Enthusiast particle effects for your character</td>
                     </tr>
                     <tr>
-                      <td>Perk 3</td>
+                      <td>Access to a private Enthusiast Discord server for direct communication with staff</td>
                     </tr>
                     <tr>
-                      <td>Perk 4</td>
+                      <td>Monthly Enthusiast-only Q&A sessions with server developers</td>
                     </tr>
                     <tr>
-                      <td>Perk 5</td>
+                      <td>Custom Enthusiast statue or monument built in the spawn area, showcasing your username and contributions</td>
                     </tr>
                   </tbody>
                 </table>
                 <br>
-                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TGLAQTWGYCNL6">Donate</a>
+                <a class="waves-effect waves-light btn-large grey darken-4" href="https://www.paypal.com/ncp/payment/TGLAQTWGYCNL6">Purchase</a>
               </div>
             </div>
           </div>
