--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
   <!-- Jquery -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
   <!-- Materialize -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css">
@@ -590,24 +590,27 @@ Loading ...</div>
   <script>
     $(".button-collapse").sideNav();
   </script>
-    <script>
-        //based on a pen by @robinselmer
-var url = "https://api.minetools.eu/ping/blocksmc.com"; //insert  server here
+   <script>
+    function loadServerInfo(url, containerId) {
+        $.getJSON(url, function(r) {
+            //data is the JSON string
+            if (r.error) {
+                $('#' + containerId).html('Server Offline');
+                return true;
+            }
+            var pl = '';
+            if (r.players.sample.length > 0) {
+                pl = '<br>OP: ' + r.players.sample[0].name;
+            }
+            $('#' + containerId).html('<br><b>Players Online:</b> ' + r.players.online + pl);
+        });
+    }
 
-$.getJSON(url, function(r) {
-  //data is the JSON string
-  if (r.error) {
-    $('#rest').html('Server Offline');
-    return true;
-  }
-  var pl = '';
-  if (r.players.sample.length > 0) {
-    pl = '<br>OP: ' + r.players.sample[0].name;
-  }
-  $('#rest').html('<br><b>Players Online:</b> ' + r.players.online + pl);
-
-});
-    </script>
+    // Call the function with appropriate parameters for each server you want to display
+    loadServerInfo("https://api.minetools.eu/ping/blocksmc.com", "rest1");
+    loadServerInfo("https://api.minetools.eu/ping/mc.hypixel.net", "rest2");
+    // Add more calls for additional servers if needed
+</script>
 </body>
 
 </html>
