--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -606,11 +606,9 @@ Loading ...</div>
         });
     }
 
-    // Call the function with appropriate parameters for each server you want to display
     loadServerInfo("https://api.minetools.eu/ping/blocksmc.com", "rest1");
     loadServerInfo("https://api.minetools.eu/ping/mc.hypixel.net", "rest2");
-    loadServerInfo("https://api.minetools.eu/ping/mc.hypixel.net", "rest3");
-    // Add more calls for additional servers if needed
+    loadServerInfo("https://api.minetools.eu/ping/play.smpearth.com", "rest3");
 </script>
 </body>
 
