--- a/minecraft/index.html
+++ b/minecraft/index.html
@@ -39,7 +39,7 @@
   <meta charset="UTF-8">
   <meta name="author" content="7TE &amp; Z_Maro">
   <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft.">
-  <meta name="keywords" content="Minecraft, Server, Balcado, Multiplayer">
+  <meta name="keywords" content="Minecraft, Server, Balcado, Multiplayer, yeah">
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="title" content="Balcado ⛏" />
   <meta name="description" content="Welcome to simplicity, where fun meets ease. Join us and rediscover the joy of Minecraft." />
